src/objects/CD_GMT_Product_Categories__c.object
<CustomObject>
    <fields>
        <fullName>GMT_PROD_CAT_ID__c</fullName>
        <externalId>true</externalId>
        <label>GMT_PROD_CAT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM Category</label>
        <referenceTo>CD_GMT_Category__c</referenceTo>
        <relationshipLabel>CD GMT Product Categories</relationshipLabel>
        <relationshipName>CD_GMT_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory1</label>
        <referenceTo>CD_GMT_Subcategory_1__c</referenceTo>
        <relationshipLabel>CD GMT Product Categories</relationshipLabel>
        <relationshipName>CD_GMT_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory2</label>
        <referenceTo>CD_GMT_Subcategory_2__c</referenceTo>
        <relationshipLabel>CD GMT Product Categories</relationshipLabel>
        <relationshipName>CD_GMT_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory3</label>
        <referenceTo>CD_GMT_Subcategory_3__c</referenceTo>
        <relationshipLabel>CD GMT Product Categories</relationshipLabel>
        <relationshipName>CD_GMT_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>CD_GMT_ProductDetails__c</referenceTo>
        <relationshipLabel>CD GMT Product Categories</relationshipLabel>
        <relationshipName>CD_GMT_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CD GMT Product Categories</label>
    <nameField>
        <label>GMT Product Categories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD GMT Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>